--- a/cronometro.html
+++ b/cronometro.html
@@ -58,11 +58,13 @@
             <div class="main-section-container">
                 
                 <main class="main-container">
-                    <div class="cronometro-container"></div>
+                    <div class="cronometro-container">
+                        <p class="cronometro-display"></p>
+                    </div>
                     <div class="btn-container">
-                        <button class="iniciar">Iniciar</button>
-                        <button class="pausar">Pausar</button>
-                        <button class="reiniciar">Reiniciar</button>
+                        <button class="btn-iniciar">Iniciar</button>
+                        <button class="btn-pausar">Pausar</button>
+                        <button class="btn-reiniciar">Reiniciar</button>
                     </div>
                 </main>
 
@@ -72,7 +74,7 @@
     
     </div>
     <script src="./assets/js/cronometro.js"></script>
-    <script src="./assets/js/main.js"></script>
+    <!-- <script src="./assets/js/main.js"></script> -->
 </body>
 
 </html>
